--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    
+    <header class="background">
+        <nav class="nav-head">
+            <h1 class="logo">LOGO</h1>
+            <button><a href="">Sign Up</a></button>
+        </nav>
+<div class="head">
+    <h1 class="">Cool Dark UI Template for Webflow Agencies!
+Stay Focused</h1>
+<button><a href="">Stay Focused</a></button>
+</div>
+    </header>
 </body>
 </html>
