--- a/index.html
+++ b/index.html
@@ -18,5 +18,28 @@ Stay Focused</h1>
 <button><a href="">Stay Focused</a></button>
 </div>
     </header>
+    <main>
+<div class="action">
+    
+    <div class="action-para">
+        <h1>See It in Action</h1>
+        <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+        <button><a href="">Launch Live Preview</a></button>
+    </div>
+    <div class="wc-img">
+    <img src="Assets/wc-mini.png" alt="">
+    </div>
+    <div class="joined">
+        <h1>Joined Thousands of Productive Users</h1>
+        <div>
+            
+        </div>
+    </div>
+
+</div>
+
+
+
+    </main>
 </body>
 </html>
