4 th commit in assignment1

--- a/index.html
+++ b/index.html
@@ -29,14 +29,26 @@ Stay Focused</h1>
     <div class="wc-img">
     <img src="Assets/wc-mini.png" alt="">
     </div>
-    <div class="joined">
-        <h1>Joined Thousands of Productive Users</h1>
-        <div>
-            
-        </div>
     </div>
 
-</div>
+    
+    <div class="joined">
+        <h1>Joined Thousands of Productive Users</h1><br>
+       <section class="flexx">
+        <div class="items">
+            <p class="items-heading">50K</p>
+            <p class="items-para">Active User</p>
+        </div>
+        <div class="items">
+            <p class="items-heading">2M+</p>
+            <p class="items-para">Focus Sessions</p>
+        </div>
+        <div class="items">
+            <p class="items-heading">95%</p>
+            <p class="items-para">Satisfaction Rate</p>
+        </div>
+        </section>
+    </div>
 
 
 
