--- a/index.html
+++ b/index.html
@@ -50,6 +50,56 @@ Stay Focused</h1>
         </section>
     </div>
 
+<section class="user-say">
+<h1>What our users say</h1>
+<div class="flx">
+
+<div class="user-div">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<h2>Loved by Designers</h2>
+<p>This template instantly leveled up our presence.” – Studio Vertex</p>
+<div class="img-div">
+<img src="Assets/avatar.png" alt="">
+<div class="date">
+<p class="r">Reviewer name <br><span style="color: #B3B3B3;">Date</span></p>
+</div>
+</div>
+</div>
+<div class="user-div">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<h2>Loved by Designers</h2>
+<p>This template instantly leveled up our presence.” – Studio Vertex</p>
+<div class="img-div">
+<img src="Assets/avatar.png" alt="">
+<div class="date">
+<p class="r">Reviewer name <br><span style="color: #B3B3B3;">Date</span></p>
+</div>
+</div>
+</div>
+<div class="user-div">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<img src="Assets/icon-star.png" alt="">
+<h2>Loved by Designers</h2>
+<p>This template instantly leveled up our presence.” – Studio Vertex</p>
+<div class="img-div">
+<img src="Assets/avatar.png" alt="">
+<div class="date">
+<p class="r">Reviewer name <br><span style="color: #B3B3B3;">Date</span></p>
+</div>
+</div>
+</div>
+</section>
 
 
     </main>
