8 th commit in assignment 1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment1</title>
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="Assets/assignment.png" type="image/x-icon">
 </head>
 <body>
     <!-- start 1 -->
@@ -131,33 +132,38 @@
     <div class="touch">
         <h1>Let’s Get in Touch</h1>
     </div>
-    <div class="input">
-<form action="">
+<div class="input">
+
+    <form action="">
         <div class="email">
         <label for="email">Email</label><br>
         <input  type="email" name="" id="email" placeholder="example@email.com">
         </div>
 
        <div class="name">
-        <label for="name">Name</label><br>
-        <input  type="text" placeholder="full name">
+          <label for="name">Name</label><br>
+           <input  type="text" placeholder="full name">
         </div>
+
         <div class="massage">
             <label for="massage">Massage</label><br>
             <!-- <input type="text"> -->
             <textarea rows="5"  cols="20" name="massage" id="" placeholder="write your message..."></textarea>
             
         </div>
+        <br>
+        <br>
         <div class="buton">
-        <button><a href="">Get in Touch</a></button>
-    </div>
-        </form>
-    </div>
+             <button><a href="">Get in Touch</a></button>
+        </div>
+     </form>
+ </div>
 
 </section>
 <!-- end 6 -->
     </main>
 
+    <!-- start 7 -->
     <footer>
         <section>
         <h1 class="footer-logo">LOGO</h1>
@@ -172,5 +178,6 @@
         </nav>
         </section>
     </footer>
+    <!-- end 7 -->
 </body>
 </html>
